tests/baselines/reference/parserExportAssignment4.errors.txt
==== tests/cases/compiler/parserExportAssignment4.ts (1 errors) ====
    export = ;
             ~
!!! parserExportAssignment4.ts(1,10): error TS1003: Identifier expected.